[gd_scene load_steps=9 format=3 uid="uid://duxarhennfh2u"]

[ext_resource type="Script" path="res://Player.gd" id="1_bawqv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_nasln"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_bno1a"]
sky_material = SubResource("ProceduralSkyMaterial_nasln")

[sub_resource type="Environment" id="Environment_vqibg"]
background_mode = 2
sky = SubResource("Sky_bno1a")
tonemap_mode = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u0hqu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3lsx1"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tkd5t"]
material = SubResource("StandardMaterial3D_3lsx1")
size = Vector3(0.5, 1.8, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_5sdnw"]
radius = 0.05

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vqibg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="World" type="Node3D" parent="."]

[node name="Baseplate" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(20, 1, 20)

[node name="Baseplate2" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 5)
use_collision = true
size = Vector3(13, 5, 3)

[node name="Player" type="CharacterBody3D" parent="World" node_paths=PackedStringArray("camera_pivot_ver", "camera_pivot_hor")]
collision_layer = 0
script = ExtResource("1_bawqv")
camera_pivot_ver = NodePath("CameraPivotHor/CameraPivotVer")
camera_pivot_hor = NodePath("CameraPivotHor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_u0hqu")

[node name="Model" type="MeshInstance3D" parent="World/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("BoxMesh_tkd5t")

[node name="CameraPivotHor" type="Node3D" parent="World/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="CameraPivotVer" type="Node3D" parent="World/Player/CameraPivotHor"]

[node name="SpringArm3D" type="SpringArm3D" parent="World/Player/CameraPivotHor/CameraPivotVer"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_5sdnw")

[node name="SpringArm3D2" type="SpringArm3D" parent="World/Player/CameraPivotHor/CameraPivotVer/SpringArm3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_5sdnw")
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="World/Player/CameraPivotHor/CameraPivotVer/SpringArm3D/SpringArm3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
current = true
fov = 80.0

[node name="JumpBufferTimer" type="Timer" parent="World/Player"]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="World/Player"]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="World/Player/JumpBufferTimer" to="World/Player" method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="World/Player/CoyoteTimer" to="World/Player" method="_on_coyote_timer_timeout"]
